v3.0.4 - in development
	* Implemented rx/tx counters
	* Fixed XBee Series 2 data broadcast
	* Fixed internal bugs

v3.0.3 - 21 Feb 2012
	* Fixed xbee_rxHandler() - now obeys allowFrameId flag
	* Exported xbee_pktDataGet()
	* Protected xbee_s1_io_parseInputs() against buffer overrun
	* XBee Series 1 now supports modem status connection types
	* XBee Series 2 support is completed (excluding sensor connection types)
	* Added generic sample code
	* Added more sample code for use with XBee Series 1 modules
	* Added sample code for use with XBee Series 2 modules

v3.0.2 - 20 Feb 2012
	* Added explicit logging of Tx & Rx data
	* Fixed internal bugs
	* Re-implemented ll_[get|ext]_index() functions
	* Refreshed error codes
	* XBee Series 1 support is complete
	* Added sample code for use with XBee Series 1

v3.0.1 - 19 Feb 2012
	* First functional release
	* Re-structured and flexible build system
	* Generic 'mode' framework
	* XBee Series 1 support with Data connection (16/64-bit addressing)
	* Tx Status handling enabled by default (brings Tx error back from module through libxbee)
