@@ -2,6 +2,7 @@ v3.0.4 - in development
 	* Implemented rx/tx counters
 	* Fixed XBee Series 2 data broadcast
 	* Fixed internal bugs
+	* Added sample code for retrieving library info (commit, build time, etc...)
 
 v3.0.3 - 21 Feb 2012
 	* Fixed xbee_rxHandler() - now obeys allowFrameId flag
